# SenseNova-U1

./: .gitignore  AGENTS.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: pages.yml
docs/: JIMSKY_MODAL_SETUP.md  index.html  inference_infra.md  inference_infra_CN.md  inference_infrastructure.md  prompt_enhancement.md  showcases.md  system-test-20260428.html
docs/assets/: README.md
docs/reports/: JIMSKY_MODAL_SETUP_REPORT.md
docs/reports/system-test-20260428/: SUMMARY.md  dry-run.json  health.json  modal-apps-after.json  modal-billing-sensenova.json
evaluation/: README.md
evaluation/docs/: understanding.md
evaluation/easi/: GUIDE.md  README.md
evaluation/easi/config/: sensenova_models.py
evaluation/easi/scripts/: download_weights.sh  lb.py  serve.sh  setup.sh
examples/: README.md  README_CN.md  test_api.py
examples/editing/: inference.py
examples/editing/data/: samples.jsonl
examples/interleave/: inference.py
examples/t2i/: inference.py
examples/t2i/data/: samples_infographic.jsonl
examples/vqa/: inference.py  run.sh
examples/vqa/data/: questions.jsonl
modal/: sensenova_u1_modal_app.py  sensenova_u1_modal_jobs.py
src/sensenova_u1/: __init__.py
src/sensenova_u1/prompt_rewrite/: __init__.py  _templates.py  rewriter.py
src/sensenova_u1/prompt_rewrite/templates/: infographic_system.md
